element fixed: color beije link home, bigger font menu links, font bigger second section home, reduced header margin header mobile, aligned lang and burgermenu, tab horizontal in tablet

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
   --lightblue: #9EC1DB;
   --yellow: #feef87;
   --dark-blue: #323e48;
+  --blue: #52798e;
 
   /* --first-color: #323e48;
   --second-color: #52798e;
@@ -68,16 +69,18 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
-body, a {
+body {
   font-family: var(--moderat-regular);
-  font-size: 1.25rem;
+  font-size: 1rem;
   letter-spacing: 0px;
-  color: var(--grey-tone-4)
+  color: var(--grey-tone-4);
+  line-height: 22px;
 }
 
 h1, h2 {
   font-family: var(--sofiaPro-bold);
   font-size: 1.7rem;
+  line-height: 30px;
 }
 
 h2 {
@@ -92,37 +95,45 @@ h3, h4, h5, h6 {
 
 @media (min-width: 768px) {
 
+  body {
+    line-height: 30px;
+  }
+
   h1 {
     font-size: 2.7rem;
+    line-height: 70px;
   }
 
   h2 {
     font-size: 1.6rem;
+    line-height: 40px;
   }
 
   h3, h4, h5, h6 {
     font-size: 1.4rem;
+    line-height: 30px;
   }
 }
 
 @media (min-width: 1600px) {
-  body, a {
-    font-family: var(--moderat-regular);
+  body {
     font-size: 1.5rem;
-    letter-spacing: 0px;
-    color: var(--grey-tone-4)
+    line-height: 35px;
   }
 
   h1 {
     font-size: 4.375rem;
+    line-height: 90px;
   }
 
   h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
+    line-height: 60px;
   }
 
   h3, h4, h5, h6 {
     font-size: 1.5rem;
+    line-height: 35px;
   }
 }
 
@@ -218,6 +229,10 @@ h3, h4, h5, h6 {
   position: fixed;
 }
 
+.position-relative {
+  position: relative;
+}
+
 /* SCROLL */
 .scroll-hidden {
   overflow: hidden;
@@ -227,11 +242,34 @@ h3, h4, h5, h6 {
 .paddingX-container-default {
   padding-left: 11.2% !important;
   padding-right: 11.2% !important;
-} 
+}
 
 @media (min-width: 768px) {
   .paddingX-container-default {
     padding-left: 21.8% !important;
     padding-right: 21.2% !important;
+  }
+}
+
+/* CLIP-PATH */
+.clip-path-default {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+}
+
+@media (min-width: 768px) {
+  .clip-path-default {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+  }
+}
+
+/* @media (min-width: 1200px) {
+  .clip-path-default {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+  }
+} */
+
+@media (min-width: 1600px) {
+  .clip-path-default {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 70%);
   }
 }
